# vos

./: .clang-format  .gdbinit  .gitignore  CMakeLists.txt  Makefile  README.md  bochs.cfg  defs.asm  format.sh  ia_32e.asm  kernel.ld  kernel64.c  linker.ld  loader.asm  loader.ld  mbr.asm  misc.asm  protected_mode.asm  vmx.asm  x86_64.asm
disc/boot/grub/: grub.cfg
include/: defs.asm  vos.asm
include/misc/: memory.h
include/vos/: asm.h  assert.h  bochs.h  cpu.h  debug.h  ept.h  fs.h  guest.h  host.h  intel.h  memory.h  stdio.h  string.h  svm.h  types.h  vmx.h  vos.h  x86.h  x86_64.h
include/vos/amd/: amd.h  svm.h
include/vos/fs/: exfat.h  fat.h
include/vos/gui/: gui.h
include/vos/intel/: intel.h  vmx.h
src/app/: test01.asm
src/bochs/: bochs.asm
src/boot/: loader.asm  loader.c  mbr.asm  multiboot2.asm
src/loader/: loader.c
src/misc/: memory.c
src/vos/: amd.c  debug.asm  ept.c  guest.c  idt.asm  intel.c  kernel.asm  kernel.c  memory.c  stdio.c  string.c  svm.asm  vmx.asm  vmx.c  x86_64.asm  x86_64.c
src/vos/amd/: amd.c
src/vos/gui/: gui.c
src/vos/intel/: intel.c  vmx.c
